# davico-photo-pipeline

./: .gitignore  notes.md  pytest.ini  readme.md  readme_old.md
src/: photomatixCL.md  pyproject.toml  readme.md  requirements.txt  run.py
src/config/: pipeline.yaml
src/config/hdr/: dpp4_recipe_exp_+2.dr4  dpp4_recipe_exp_-2.dr4  photomatix_photographic_preset.xmp  rawtherapee_profile_exposure_+2.pp3  rawtherapee_profile_exposure_-2.pp3  rawtherapee_profile_exposure_0.pp3
src/pipeline/: __init__.py  orchestrator.py  state.py
src/pipeline/ai/: __init__.py
src/pipeline/steps/grouping/: __init__.py  adapter.py  grouper.py  groups_html.py  groups_io.py  pano_checker.py  source_classifier.py
src/pipeline/steps/hdr/: __init__.py  ghost_detector.py  hdr_result_merger.py  image_aligner.py  raw_to_jpg_converter.py
src/pipeline/steps/hdr/aligner/: adapter.py  aligner.py  alignments_io.py
src/pipeline/steps/hdr/exif_restore/: adapter.py  restorer.py
src/pipeline/steps/hdr/ghost_application/: __init__.py  adapter.py  applicator.py  ghost_applications_io.py
src/pipeline/steps/hdr/ghost_detector/: adapter.py  detector.py  ghosts_io.py
src/pipeline/steps/hdr/merger/: __init__.py  adapter.py  hdr_merges_io.py  merger.py  photomatix.py
src/pipeline/steps/hdr/raw_to_jpg/: adapter.py  converter.py  raw_conversions_io.py
src/pipeline/utils/: exif.py  logger.py
test/integration/: test_exif_restore.py  test_ghost_application.py  test_ghost_detector.py  test_grouper_integration.py  test_hdr_merger.py  test_image_alignment.py  test_photomatix_subprocess.py  (+1 more)
(+7 files in other folders)
